AX: <footer> HTML5 tag not reading as ARIA Landmark to VoiceOver https://bugs.webkit.org/show_bug.cgi?id=190138 <rdar://problem/44907695>

Reviewed by Joanmarie Diggs.

Source/WebCore:

Make sure that footer elements use the right role depending on their context.
If scoped to body, they become contentinfo. Otherwise they are just delineated by
a footer subrole.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isLandmark const):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored const):
(WebCore::AccessibilityRenderObject::isDescendantOfElementType const):
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):
* accessibility/AccessibilityRenderObject.h:
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityIsLandmarkRole:]):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper subrole]):

LayoutTests:

* accessibility/mac/footer-expected.txt:
* accessibility/mac/footer-roledescription-expected.txt:
* accessibility/mac/footer-roledescription.html:
* accessibility/mac/footer.html:
* accessibility/roles-computedRoleString-expected.txt:
* accessibility/roles-computedRoleString.html:
* platform/gtk/accessibility/roles-computedRoleString-expected.txt:
* platform/mac-wk2/accessibility/roles-exposed-expected.txt:
* platform/mac/accessibility/roles-computedRoleString-expected.txt:
* platform/mac/accessibility/roles-exposed-expected.txt:


Canonical link: https://commits.webkit.org/209375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242051 268f45cc-cd09-0410-ab3c-d52691b4dbfc